# roba

./: .gitignore  README.md  pyproject.toml
deploy/scc/: 00_build_sif.sh  RCS_REQUEST.md  README.md  SCC_USAGE.md  config.sh  job_headless.qsub  run_interactive.sh
docs/: ARCHITECTURE.md  CONTROL_SURVEY.md  FEASIBILITY.md  MATERIAL_MODEL.md  REFERENCES.md  ROADMAP.md
experiments/: ENV.md  dual_arm.py  dual_arm_cut.py  dual_arm_ik_cut.py  force_cut.py  headless_cut.py  hold_and_cut.py  plot_cut.py  plot_results.py  record_cut.py  render_pv.py  render_replay.py  render_softbody.py  run_demo.py  skin_skive.py  smoke_openarm.py  usd_inspect.py  verify_rebot.py  warp_cut.py  warp_feasibility.py
paper/: main.tex  outline.md
perception/: README.md  make_synthetic_cut_video.py  validate_traj.py
perception/video2traj/: __init__.py  pipeline.py
src/roba_sim/: __init__.py  _isaac_compat.py  app.py  config.py  recording.py
src/roba_sim/control/: __init__.py  cutting_controller.py  impedance_hold.py
src/roba_sim/cutting/: __init__.py  breakable_seams.py  material.py
src/roba_sim/scene/: __init__.py  arms.py  pork_belly.py  world.py
src/roba_sim/teleop/: __init__.py  mouse_plane.py  plane_ik.py
src/roba_sim/ui/: __init__.py  control_panel.py
tests/: test_core.py
